--- a/mall-coupon/src/main/resources/application.yml
+++ b/mall-coupon/src/main/resources/application.yml
@@ -1,22 +1,23 @@
-server:
-  port: 7001
-
 spring:
-  application:
-    name: mall-coupon
   datasource:
     username: root
     password: root
     url: jdbc:mysql://111.231.89.200:3310/mall_sms?useUnicode=true&characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 111.231.89.200:1111
-
+  profiles:
+    active: dev
+    # active: test # 表示开发环境
+    # active: info # 表示开发环境
 
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
