--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -14,6 +14,12 @@
 
     <dependencies>
 
+        <!--oss-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+        </dependency>
+
         <!--nacos-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
