add：更新网关服务

--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -25,6 +25,12 @@
             <groupId>com.bay.mall</groupId>
             <artifactId>mall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.validation</groupId>
+                    <artifactId>validation-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
