add：更新仓库服务

--- a/mall-ware/src/main/resources/application.yml
+++ b/mall-ware/src/main/resources/application.yml
@@ -1,18 +1,12 @@
-server:
-  port: 11001
-
 spring:
-  application:
-    name: mall-ware
   datasource:
     username: root
     password: root
     url: jdbc:mysql://111.231.89.200:3310/mall_wms?useUnicode=true&characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 111.231.89.200:1111
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+
 
 
 mybatis-plus:
@@ -20,3 +14,7 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+
+logging:
+  level:
+    com.bay.mall.ware: debug
