--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -1,21 +1,28 @@
-server:
-  port: 8000
-
 spring:
-  application:
-    name: mall-product
   datasource:
     username: root
     password: root
     url: jdbc:mysql://111.231.89.200:3310/mall_psm?useUnicode=true&characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 111.231.89.200:1111
+    # Failed to validate connection com.mysql.cj.jdbc.ConnectionImpl
+    hikari:
+      minimum-idle: 3
+      maximum-pool-size: 10
+      max-lifetime: 30000
+      connection-test-query: SELECT 1
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+
 
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+      # 全局的逻辑删除规则
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
+logging:
+  level:
+    com.bay.mall: debug
