--- a/mall-product/pom.xml
+++ b/mall-product/pom.xml
@@ -70,6 +70,12 @@
             </exclusions>
         </dependency>
 
+        <!--thymeleaf-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
